--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.5.1+cu124\n",
       "True\n",
       "1\n",
       "NVIDIA GeForce GTX 1050\n"
@@ -17,6 +18,7 @@
    ],
    "source": [
     "import torch\n",
+    "print(torch.__version__)\n",
     "print(torch.cuda.is_available())  # Debe devolver True\n",
     "print(torch.cuda.device_count())  # Número de GPUs disponibles\n",
     "print(torch.cuda.get_device_name(0))  # Nombre de tu GPU\n"
@@ -799,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
