--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -461,327 +461,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "REGLAS DIFERENCIAR PORTERO"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8518], device='cuda:0')\n",
-      "data: tensor([[1.1930e+03, 5.7641e+02, 1.2388e+03, 6.6417e+02, 8.5180e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1215.9259,  620.2903,   45.7654,   87.7612]], device='cuda:0')\n",
-      "xywhn: tensor([[0.6333, 0.5743, 0.0238, 0.0813]], device='cuda:0')\n",
-      "xyxy: tensor([[1193.0432,  576.4097, 1238.8086,  664.1709]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.6214, 0.5337, 0.6452, 0.6150]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8216], device='cuda:0')\n",
-      "data: tensor([[420.9445, 391.0857, 464.1365, 462.8521,   0.8216,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[442.5405, 426.9689,  43.1919,  71.7664]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2305, 0.3953, 0.0225, 0.0665]], device='cuda:0')\n",
-      "xyxy: tensor([[420.9445, 391.0857, 464.1365, 462.8521]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2192, 0.3621, 0.2417, 0.4286]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8198], device='cuda:0')\n",
-      "data: tensor([[554.4917, 539.6428, 591.2357, 615.3657,   0.8198,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[572.8636, 577.5043,  36.7440,  75.7229]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2984, 0.5347, 0.0191, 0.0701]], device='cuda:0')\n",
-      "xyxy: tensor([[554.4917, 539.6428, 591.2357, 615.3657]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2888, 0.4997, 0.3079, 0.5698]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8108], device='cuda:0')\n",
-      "data: tensor([[1.2769e+03, 3.5919e+02, 1.3120e+03, 4.2835e+02, 8.1081e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1294.4260,  393.7673,   35.0801,   69.1595]], device='cuda:0')\n",
-      "xywhn: tensor([[0.6742, 0.3646, 0.0183, 0.0640]], device='cuda:0')\n",
-      "xyxy: tensor([[1276.8860,  359.1876, 1311.9661,  428.3470]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.6650, 0.3326, 0.6833, 0.3966]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8080], device='cuda:0')\n",
-      "data: tensor([[256.5521, 435.6424, 283.8530, 513.2261,   0.8080,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[270.2026, 474.4343,  27.3009,  77.5836]], device='cuda:0')\n",
-      "xywhn: tensor([[0.1407, 0.4393, 0.0142, 0.0718]], device='cuda:0')\n",
-      "xyxy: tensor([[256.5521, 435.6424, 283.8530, 513.2261]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.1336, 0.4034, 0.1478, 0.4752]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8043], device='cuda:0')\n",
-      "data: tensor([[8.4777e+02, 3.3875e+02, 8.7984e+02, 4.0861e+02, 8.0434e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[863.8079, 373.6795,  32.0687,  69.8636]], device='cuda:0')\n",
-      "xywhn: tensor([[0.4499, 0.3460, 0.0167, 0.0647]], device='cuda:0')\n",
-      "xyxy: tensor([[847.7736, 338.7477, 879.8423, 408.6113]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.4415, 0.3137, 0.4583, 0.3783]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.8012], device='cuda:0')\n",
-      "data: tensor([[1.0770e+03, 3.5176e+02, 1.1063e+03, 4.2232e+02, 8.0120e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1091.6738,  387.0385,   29.2694,   70.5668]], device='cuda:0')\n",
-      "xywhn: tensor([[0.5686, 0.3584, 0.0152, 0.0653]], device='cuda:0')\n",
-      "xyxy: tensor([[1077.0392,  351.7551, 1106.3086,  422.3220]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.5610, 0.3257, 0.5762, 0.3910]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7942], device='cuda:0')\n",
-      "data: tensor([[1.0024e+03, 4.3057e+02, 1.0293e+03, 5.0870e+02, 7.9420e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1015.8591,  469.6328,   26.8422,   78.1304]], device='cuda:0')\n",
-      "xywhn: tensor([[0.5291, 0.4348, 0.0140, 0.0723]], device='cuda:0')\n",
-      "xyxy: tensor([[1002.4380,  430.5677, 1029.2802,  508.6980]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.5221, 0.3987, 0.5361, 0.4710]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7915], device='cuda:0')\n",
-      "data: tensor([[ 93.4409, 599.8497, 121.3960, 685.3112,   0.7915,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[107.4184, 642.5804,  27.9551,  85.4615]], device='cuda:0')\n",
-      "xywhn: tensor([[0.0559, 0.5950, 0.0146, 0.0791]], device='cuda:0')\n",
-      "xyxy: tensor([[ 93.4409, 599.8497, 121.3960, 685.3112]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.0487, 0.5554, 0.0632, 0.6345]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7829], device='cuda:0')\n",
-      "data: tensor([[7.8835e+02, 2.4382e+02, 8.0683e+02, 2.9719e+02, 7.8292e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[797.5893, 270.5024,  18.4811,  53.3678]], device='cuda:0')\n",
-      "xywhn: tensor([[0.4154, 0.2505, 0.0096, 0.0494]], device='cuda:0')\n",
-      "xyxy: tensor([[788.3488, 243.8185, 806.8298, 297.1863]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.4106, 0.2258, 0.4202, 0.2752]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7776], device='cuda:0')\n",
-      "data: tensor([[458.5266, 241.4130, 489.3116, 304.3899,   0.7776,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[473.9191, 272.9015,  30.7850,  62.9769]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2468, 0.2527, 0.0160, 0.0583]], device='cuda:0')\n",
-      "xyxy: tensor([[458.5266, 241.4130, 489.3116, 304.3899]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2388, 0.2235, 0.2548, 0.2818]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7411], device='cuda:0')\n",
-      "data: tensor([[7.3301e+02, 3.2081e+02, 7.5921e+02, 3.8954e+02, 7.4106e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[746.1087, 355.1714,  26.2031,  68.7279]], device='cuda:0')\n",
-      "xywhn: tensor([[0.3886, 0.3289, 0.0136, 0.0636]], device='cuda:0')\n",
-      "xyxy: tensor([[733.0071, 320.8075, 759.2103, 389.5354]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.3818, 0.2970, 0.3954, 0.3607]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7064], device='cuda:0')\n",
-      "data: tensor([[515.6530, 232.7891, 545.5037, 295.8137,   0.7064,   0.0000]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[530.5783, 264.3014,  29.8507,  63.0246]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2763, 0.2447, 0.0155, 0.0584]], device='cuda:0')\n",
-      "xyxy: tensor([[515.6530, 232.7891, 545.5037, 295.8137]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2686, 0.2155, 0.2841, 0.2739]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.7044], device='cuda:0')\n",
-      "data: tensor([[4.1688e+02, 6.8929e+02, 4.4551e+02, 7.7426e+02, 7.0437e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[431.1913, 731.7769,  28.6303,  84.9741]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2246, 0.6776, 0.0149, 0.0787]], device='cuda:0')\n",
-      "xyxy: tensor([[416.8762, 689.2898, 445.5065, 774.2639]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2171, 0.6382, 0.2320, 0.7169]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.6601], device='cuda:0')\n",
-      "data: tensor([[7.3780e+02, 1.6365e+02, 7.6075e+02, 2.2104e+02, 6.6010e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[749.2748, 192.3425,  22.9493,  57.3943]], device='cuda:0')\n",
-      "xywhn: tensor([[0.3902, 0.1781, 0.0120, 0.0531]], device='cuda:0')\n",
-      "xyxy: tensor([[737.8002, 163.6454, 760.7495, 221.0397]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.3843, 0.1515, 0.3962, 0.2047]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.6490], device='cuda:0')\n",
-      "data: tensor([[1.0569e+03, 3.4142e+02, 1.0819e+03, 4.0542e+02, 6.4896e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1069.3876,  373.4231,   24.9492,   63.9992]], device='cuda:0')\n",
-      "xywhn: tensor([[0.5570, 0.3458, 0.0130, 0.0593]], device='cuda:0')\n",
-      "xyxy: tensor([[1056.9130,  341.4235, 1081.8622,  405.4227]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.5505, 0.3161, 0.5635, 0.3754]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.4454], device='cuda:0')\n",
-      "data: tensor([[7.0838e+02, 2.8702e+02, 7.2951e+02, 3.5475e+02, 4.4543e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[718.9432, 320.8856,  21.1359,  67.7371]], device='cuda:0')\n",
-      "xywhn: tensor([[0.3744, 0.2971, 0.0110, 0.0627]], device='cuda:0')\n",
-      "xyxy: tensor([[708.3752, 287.0171, 729.5112, 354.7542]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.3689, 0.2658, 0.3800, 0.3285]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.4301], device='cuda:0')\n",
-      "data: tensor([[5.8684e+02, 1.2694e+02, 6.0943e+02, 1.7726e+02, 4.3010e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[598.1346, 152.1033,  22.5851,  50.3180]], device='cuda:0')\n",
-      "xywhn: tensor([[0.3115, 0.1408, 0.0118, 0.0466]], device='cuda:0')\n",
-      "xyxy: tensor([[586.8420, 126.9444, 609.4272, 177.2623]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.3056, 0.1175, 0.3174, 0.1641]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.3554], device='cuda:0')\n",
-      "data: tensor([[1.1435e+03, 2.5058e+02, 1.1651e+03, 3.1526e+02, 3.5541e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[1154.3479,  282.9190,   21.5995,   64.6803]], device='cuda:0')\n",
-      "xywhn: tensor([[0.6012, 0.2620, 0.0112, 0.0599]], device='cuda:0')\n",
-      "xyxy: tensor([[1143.5482,  250.5789, 1165.1477,  315.2592]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.5956, 0.2320, 0.6068, 0.2919]], device='cuda:0')\n",
-      "ultralytics.engine.results.Boxes object with attributes:\n",
-      "\n",
-      "cls: tensor([0.], device='cuda:0')\n",
-      "conf: tensor([0.2803], device='cuda:0')\n",
-      "data: tensor([[4.1878e+02, 3.1855e+02, 4.3967e+02, 3.8552e+02, 2.8030e-01, 0.0000e+00]], device='cuda:0')\n",
-      "id: None\n",
-      "is_track: False\n",
-      "orig_shape: (1080, 1920)\n",
-      "shape: torch.Size([1, 6])\n",
-      "xywh: tensor([[429.2246, 352.0375,  20.8837,  66.9663]], device='cuda:0')\n",
-      "xywhn: tensor([[0.2236, 0.3260, 0.0109, 0.0620]], device='cuda:0')\n",
-      "xyxy: tensor([[418.7827, 318.5543, 439.6664, 385.5206]], device='cuda:0')\n",
-      "xyxyn: tensor([[0.2181, 0.2950, 0.2290, 0.3570]], device='cuda:0')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Definir reglas adicionales para diferenciar al portero\n",
-    "for i, (x, y, w, h) in enumerate(detections):\n",
-    "    cluster = labels[i]\n",
-    "    label = \"Desconocido\"\n",
-    "    \n",
-    "    # Regla basada en heurística\n",
-    "    if cluster == 0:\n",
-    "        label = \"Jugador\"\n",
-    "    elif cluster == 1:\n",
-    "        label = \"Balón\"\n",
-    "    elif cluster == 2:\n",
-    "        label = \"Árbitro\"\n",
-    "    else:\n",
-    "        # Para detectar el portero:\n",
-    "        # - Está cerca de la portería (por ejemplo, en los extremos de la imagen)\n",
-    "        # - Tiene un bounding box más grande (porque suele extender los brazos)\n",
-    "        print(type(frame))\n",
-    "        '''if x < np.ndarray(frame).shape[0] * 0.2 or x > np.ndarray(frame).shape[0] * 0.8:  # Portero en los extremos\n",
-    "            if w * h > np.mean(detections[:, 2] * detections[:, 3]):  # Bounding box grande\n",
-    "                label = \"Portero\"\n",
-    "            else:\n",
-    "                label = \"Jugador\"\n",
-    "        else:\n",
-    "            label = \"Jugador\"\n",
-    "'''\n",
-    "    # Dibujar el bounding box en la imagen\n",
-    "    color = (0, 255, 0)  # Verde por defecto\n",
-    "    if label == \"Balón\":\n",
-    "        color = (0, 0, 255)  # Rojo\n",
-    "    elif label == \"Árbitro\":\n",
-    "        color = (255, 0, 0)  # Azul\n",
-    "    elif label == \"Portero\":\n",
-    "        color = (255, 255, 0)  # Amarillo\n",
-    "    \n",
-    "    cv2.rectangle(frame, \n",
-    "                  (int(x - w / 2), int(y - h / 2)), \n",
-    "                  (int(x + w / 2), int(y + h / 2)), \n",
-    "                  color, 2)\n",
-    "    cv2.putText(frame, label, (int(x), int(y)), cv2.FONT_HERSHEY_SIMPLEX, 0.5, color, 2)\n",
-    "\n",
-    "# Guardar el frame etiquetado\n",
-    "cv2.imwrite(\"output.jpg\", frame)\n"
+    "from .utils import get_color\n"
    ]
   }
  ],
